мелкие исправления и улучшения логики